@@ -21,18 +21,8 @@ jobs:
     - name: Generate static files
       run: |
         make doc
-    - name: Init new repo in docs/build/html folder and commit generated files
-      run: |
-        cd docs/build/html
-        git init
-        git add -A
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git config --global --add safe.directory /github/workspace
-        git commit -m 'deploy'
-    - name: Force push to destination branch
-      uses: ad-m/github-push-action@v0.5.0
+    - name: Deploy to GH Pages 🚀
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: gh-pages
-        force: true
+        publish_dir: docs/build/html
